@@ -11,6 +11,8 @@
          ManyToManyField and OneToOneField.
          (resolves issue 15)
 
+CHANGED: Improved performance of update_translation_fields command.
+         (thanks to adamsc, resolves issue 43)
 CHANGED: Custom fields are extended instead of overridden.
 CHANGED: Factored out settings into a separate settings.py and consistently
          used an app specific settings prefix.
